--- a/src/pages/newsPage/newsPage.module.scss
+++ b/src/pages/newsPage/newsPage.module.scss
@@ -5,7 +5,7 @@
   flex-wrap: wrap;
   align-items: flex-start;
 
-  @media (width <= 375px) {
+  @media (width <= 640px) {
     padding: 40px 0 80px;
   }
 }
@@ -15,6 +15,10 @@
   max-width: 440px;
   aspect-ratio: 440 / 300;
   object-fit: cover;
+
+  @media (width <= 640px) {
+    max-width: 100%;
+  }
 }
 
 .newsText {
@@ -24,7 +28,7 @@
   gap: 40px;
   white-space: pre-line;
 
-  @media (width <= 375px) {
+  @media (width <= 640px) {
     gap: 30px;
     padding-inline: 10px;
   }
@@ -33,7 +37,8 @@
 .title {
   white-space: nowrap;
 
-  @media (width <= 375px) {
+  @media (width <= 640px) {
+    white-space: wrap;
     font-size: 24px;
   }
 }
@@ -47,7 +52,7 @@
   flex-direction: column;
   gap: 20px;
 
-  @media (width <= 375px) {
+  @media (width <= 640px) {
     gap: 10px;
   }
 }
@@ -62,7 +67,7 @@
   gap: 20px;
   max-width: 440px;
 
-  @media (width <= 375px) {
+  @media (width <= 640px) {
     gap: 10px;
   }
 }
