--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,15 +1,20 @@
 .header {
   position: sticky;
   top: 0;
-  padding: 20px 40px 15px;
   width: 100%;
+  background-color: $black-color;
+  border-bottom: 1px solid rgba($color: $white-color, $alpha: 0.3);
+  z-index: 2;
+}
+
+.wrapper {
+  padding: 20px 40px 15px;
+  max-width: 1440px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 20px;
-  background-color: $black-color;
-  border-bottom: 1px solid rgba($color: $white-color, $alpha: 0.3);
-  z-index: 2;
+  margin: 0 auto;
 
   @media (width <= 640px) {
     padding: 20px 10px;
