--- a/src/components/mainContent/mainContent.module.scss
+++ b/src/components/mainContent/mainContent.module.scss
@@ -3,6 +3,8 @@
   flex-direction: column;
   gap: 40px;
   padding: 60px 40px;
+  max-width: 1440px;
+  margin: 0 auto;
 
   @media (width <= 640px) {
     padding: 0;
