--- a/src/pages/newsPage/newsPage.module.scss
+++ b/src/pages/newsPage/newsPage.module.scss
@@ -4,6 +4,8 @@
   gap: 20px;
   flex-wrap: wrap;
   align-items: flex-start;
+  max-width: 1440px;
+  margin: 0 auto;
 
   @media (width <= 640px) {
     padding: 40px 0 80px;
