--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -12,14 +12,20 @@
 }
 
 :root {
+  background-color: $black-color;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 320px;
+  min-height: 100vh;
   font-family: $font-name, sans-serif;
   font-size: 16px;
   line-height: 130%;
   font-weight: 400;
   color: $white-color;
-  background-color: $black-color;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1,
