--- a/src/components/mainContent/mainContent.module.scss
+++ b/src/components/mainContent/mainContent.module.scss
@@ -4,7 +4,8 @@
   gap: 40px;
   padding: 60px 40px;
   max-width: 1440px;
-  margin: 0 auto;
+  width: 100%;
+  flex-grow: 1;
 
   @media (width <= 640px) {
     padding: 0;
@@ -55,6 +56,7 @@
   width: 100%;
   aspect-ratio: 440 / 300;
   object-fit: cover;
+  transition: border-radius 0.2s;
 }
 
 .description {
